--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,15 @@
 <div id="main-nav-logo">
-    <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
+    <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png"
+            alt="Team Builders Limited Logo"></a>
     <div id="social-menu">
-        <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-        <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest" target="_blank"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
-        <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube" target="_blank"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
+        <a href="https://www.facebook.com/teambuilderslimited/" title="Facebook" target="_blank"><span
+                class="fa fa-facebook" aria-hidden="true"></span></a>
+        <a href="https://www.pinterest.com/teambuilders0087/" title="Pinterest" target="_blank"><span
+                class="fa fa-pinterest" aria-hidden="true"></span></a>
+        <a href="https://www.instagram.com/teambuilderslimited/" title="Instagram" target="_blank"><span
+                class="fa fa-instagram" aria-hidden="true"></span></a>
+        <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos" title="Youtube" target="_blank"><span
+                class="fa fa-youtube-play" aria-hidden="true"></span></a>
     </div>
 </div>
 <div id="main-menu-container">
@@ -14,10 +19,10 @@
     </div>
     <div id="feature-menu-2">
         <a href="https://www.acornfinance.com/apply/?d=HG2WM#/" target="_blank">Apply for a Loan</a>
-        <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>  
+        <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>
     </div>
     <div id="feature-menu-3">
-        <a href="/contact-us" class="btn btn-secondary uppercase" id="contact-feature">Contact Us</a> 
+        <a href="/contact-us" class="btn btn-secondary uppercase" id="contact-feature">Contact Us</a>
         <a href="tel:3194818326" class="phone-number btn"> (319) 481-8326 </a>
     </div>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
@@ -25,64 +30,85 @@
     <div id="main-menu" class="sidebar">
         <button class="closebtn"><img src="images/home/cancel.png"></button>
         <div id="collapseMenu">
-        <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
-        <div id="primary-links">
-            <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>        
-            <a href="/">Home</a>
-            <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
-            <div id="collapsed-menu-interior">
-                <a href="/basement-renovations">Basement Renovations</a>
-                <a href="/kitchen-renovations">Kitchen Renovations</a>
+            <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png"
+                    alt="Team Builders Limited Logo"></a>
+            <div id="primary-links">
+                <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
+                <a href="/">Home</a>
+                <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right"
+                        aria-hidden="true"></span></a>
+                <div id="collapsed-menu-interior">
+                    <a href="/basement-renovations">Basement Renovations</a>
+                    <a href="/kitchen-renovations">Kitchen Renovations</a>
+                </div>
+                <a href="#" id="collapse-toggle-exterior">Exterior Remodeling<span class="fa fa-angle-double-right"
+                        aria-hidden="true"></span></a>
+                <div id="collapsed-menu-exterior">
+                    <a href="/fencing">Fences</a>
+                    <a href="/roofing">Roofing</a>
+                    <a href="/deck-pergolas">Decks</a>
+                    <a href="/pergolas">Pergolas</a>
+                    <a href="/siding">Siding</a>
+                    <a href="/gutters">Gutters</a>
+                    <a href="/garages">Garages</a>
+                </div>
+                <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right"
+                        aria-hidden="true"></span></a>
+                <div id="collapsed-menu-shed">
+                    <a href="/shed-homes-shouses">Shed Houses "Shouses"</a>
+                    <a href="/agriculture-commercial-buildings">Agriculture & Commercial Buildings</a>
+                    <a href="/event-venues">Event Venues</a>
+                </div>
             </div>
-            <a href="#" id="collapse-toggle-exterior">Exterior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
-            <div id="collapsed-menu-exterior">
-                <a href="/fencing">Fences</a>
-                <a href="/roofing">Roofing</a>
-                <a href="/deck-pergolas">Decks</a>
-                <a href="/pergolas">Pergolas</a>
-                <a href="/siding">Siding</a>
-                <a href="/gutters">Gutters</a>
-                <a href="/garages">Garages</a>
+            <div id="secondary-links">
+                <a href="/our-work">Our Work</a>
+                <a href="/process">Our Process</a>
+                <a href="/about-t-e-a-m-builders">About Our Owners</a>
+                <a href="/contact-us">Contact Us</a>
+                <a href="/insurance-claims">Insurance Claims</a>
+                <a href="/roofing">Roof Estimate</a>
+                <a href="/client-feedback-form">Client Feedback</a>
+                <a href="/referral">Referral Program</a>
+                <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"
+                    target="_blank">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
             </div>
-            <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
-            <div id="collapsed-menu-shed">
-                <a href="/shed-homes-shouses">Shed Houses "Shouses"</a>
-                <a href="/agriculture-commercial-buildings">Agriculture & Commercial Buildings</a>
-                <a href="/event-venues">Event Venues</a>
-            </div>
-        </div>
-        <div id="secondary-links">
-            <a href="/our-work">Our Work</a>
-            <a href="/process">Our Process</a>
-            <a href="/about-t-e-a-m-builders">About Our Owners</a>
-            <a href="/contact-us">Contact Us</a>
-            <a href="/insurance-claims">Insurance Claims</a>
-            <a href="/roofing">Roof Estimate</a>
-            <a href="/client-feedback-form">Client Feedback</a>
-            <a href="/referral">Referral Program</a>
-            <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
-        </div>
         </div>
     </div>
     <button class="openbtn"><img src="images/home/menu.png"></button>
 </div>
 
 <script>
-    $('.openbtn').on('click', function() {
-            $('.sidebar').css('right', '0');
-            $('.openbtn').css('opacity', '0');
-            $('.openbtn').css('visibility', 'hidden');
-            $('.closebtn').css('opacity', '1');
-            $('.closebtn').css('visibility', 'visible');
-            $('body').css('position', 'fixed');
-        });
-    
-        $('.closebtn').on('click', function() {
-            $('.sidebar').css('right', '-375px');
-            $('.openbtn').css('opacity', '1');
-            $('.openbtn').css('visibility', 'visible');
-            $('.closebtn').css('opacity', '0');
-            $('.closebtn').css('visibility', 'hidden');
-            $('body').css('position', 'inherit');
-        });
+    $('.openbtn').on('click', function () {
+        $('.sidebar').css('right', '0');
+        $('.openbtn').css('opacity', '0');
+        $('.openbtn').css('visibility', 'hidden');
+        $('.closebtn').css('opacity', '1');
+        $('.closebtn').css('visibility', 'visible');
+        $('body').css('position', 'fixed');
+    });
+
+    $('.closebtn').on('click', function () {
+        $('.sidebar').css('right', '-375px');
+        $('.openbtn').css('opacity', '1');
+        $('.openbtn').css('visibility', 'visible');
+        $('.closebtn').css('opacity', '0');
+        $('.closebtn').css('visibility', 'hidden');
+        $('body').css('position', 'inherit');
+    });
+
+    // Main Menu Collapse
+    $('#collapse-toggle-interior').on('click', function () {
+        $('#collapsed-menu-interior').slideToggle();
+        $(this).children().toggleClass("rotate");
+    });
+
+    $('#collapse-toggle-exterior').on('click', function () {
+        $('#collapsed-menu-exterior').slideToggle();
+        $(this).children().toggleClass("rotate");
+    });
+
+    $('#collapse-toggle-shed').on('click', function () {
+        $('#collapsed-menu-shed').slideToggle();
+        $(this).children().toggleClass("rotate");
+    });
 </script>
