--- a/css/main.css
+++ b/css/main.css
@@ -490,8 +490,8 @@
         font-size: 24px;
         margin-left: 75%;
         position: absolute;
-        right: 5%;
-        top: 3.25%;
+        right: 0;
+        top: 35px;s
     }
     
     .sidebar .closebtn:hover {
