--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -84,7 +84,7 @@
         $('.openbtn').css('visibility', 'hidden');
         $('.closebtn').css('opacity', '1');
         $('.closebtn').css('visibility', 'visible');
-        $('body').css('position', 'fixed');
+        // $('body').css('position', 'fixed');
     });
 
     $('.closebtn').on('click', function () {
@@ -93,7 +93,7 @@
         $('.openbtn').css('visibility', 'visible');
         $('.closebtn').css('opacity', '0');
         $('.closebtn').css('visibility', 'hidden');
-        $('body').css('position', 'inherit');
+        // $('body').css('position', 'inherit');
     });
 
     // Main Menu Collapse
