--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
     <div id="feature-menu-3">
         <a href="/contact-us" class="btn btn-secondary uppercase" id="contact-feature">Contact Us</a>
     </div>
-    <a href="tel:3194818326" class="phone-number btn"><span class="fa fa-phone"></span><span> (319) 481-8326</span></a>
+    <a href="tel:3194818326" class="phone-number btn"><span class="fa fa-phone"></span><span> (319) 481-8326</span><span> Call</span></a>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
     <div id="main-menu" class="sidebar">
