--- a/css/main.css
+++ b/css/main.css
@@ -541,6 +541,8 @@
       background: #3f9e00;
       color: #fff!important;
       font-size: 14px;
+      display: flex;
+      align-items: center;
     }
 
     .phone-number span:nth-child(2) {
@@ -800,6 +802,12 @@
           text-align: center;
           color: #fff;
           text-decoration: underline;
+      }
+      .phone-number {
+          padding: 0;
+      }
+      .phone-number .fa-phone {
+          padding-right: 7.5px;
       }
       .phone-number span:nth-child(2) {
           display: none;
