--- a/css/main.css
+++ b/css/main.css
@@ -2020,3 +2020,119 @@
 .social #social-menu {
     display: block;
 }
+
+.webLeadForm__outerDiv {
+    margin: 35px auto;
+    width: 400px;
+    position: relative;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #767676;
+}
+
+.webLeadForm__form {
+    margin: 0;
+    width: 100%;
+}
+
+.webLeadForm__fieldDiv {
+    margin: 0 20px 15px 20px;
+}
+
+.webLeadForm__messageSentDiv {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.webLeadForm__messageSent {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.webLeadForm__successMessage {
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+.webLeadForm__label {
+    padding-bottom: 5px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.webLeadForm__inputDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.webLeadForm__input {
+    width: 100%;
+    border-radius: 6px;
+    border: none;
+    font-size: 18px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 0;
+    border: 1px solid #767676;
+}
+
+input.webLeadForm__input {
+    height: 40px;
+}
+
+textarea.webLeadForm__input {
+    font-family: inherit;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    resize: none;
+}
+
+.webLeadForm__stateZipDiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin: 0 20px 15px 20px;
+}
+
+.webLeadForm__stateZipDiv .webLeadForm__fieldDiv:first-child {
+    margin: 0 10px 0 0;
+    width: 50%;
+}
+
+.webLeadForm__stateZipDiv .webLeadForm__fieldDiv:last-child {
+    margin: 0 0 0 10px;
+    width: 50%;
+}
+
+.webLeadForm__submitDiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+}
+
+.webLeadForm__submit {
+    background-color: #3f9e00;
+    color: #EFEFEF;
+    margin-left: 20px;
+    padding: 8px 20px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.webLeadForm__requiredLabel {
+    font-size: 11px;
+    padding: 0;
+    margin-right: 20px;
+}
