add new kitchen images

--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class='webLeadForm__submitDiv'>
-            <input class='webLeadForm__submit' type='submit' name='submit' value='Submit' onclick="return gtag_report_conversion('https://teambuilderslimited.com/')" />
+            <input class='webLeadForm__submit' type='submit' name='submit' value='Submit' />
             <span class='webLeadForm__label webLeadForm__requiredLabel'> * Required </span>
         </div>
     </form>
