--- a/css/main.css
+++ b/css/main.css
@@ -1050,7 +1050,7 @@
   }
   
   .hero-nav.kitchen {
-    background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg);
+    background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Jones+Updated+Kitchen+Remodel+Corner+Shot+2+Grundy+Center+-+Watermarked.png);
   }
   
   .hero-nav.fencing {
